objects/MessagingEndUser.object
<CustomObject>
    <fields>
        <fullName>CN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Messaging Users</relationshipLabel>
        <relationshipName>Messaging_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_MG_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>MG Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_last_orderid__c</fullName>
        <label>last_orderid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_last_sub__c</fullName>
        <label>last_sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>